[package]
name = "waragent-simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "waragent_simulation"
path = "src/lib.rs"

[[bin]]
name = "waragent"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.5", features = ["derive"] }
chrono      = "0.4"

# social-simulation framework (socsim) — ABM engine substrate for WarAgent.  Country
# agents are few (WWI=8) and have no spatial grid; the per-country Board relations are
# kept as an explicit BTreeMap matrix (the source of truth), while socsim-net holds a
# global alliance graph used only for cluster/MI metrics & visualization (directed /
# weighted via #18/#28).  socsim-llm's "live" feature enables the ollama + openai
# backends (FallbackClient).  reqwest / sha2 are NOT used (socsim-llm owns the HTTP
# transport and the prompt-cache hashing); this supersedes design §4.2/§7 and matches
# li2024 / zhao2024 / ren2024 / gao2023.  The concrete commit is pinned in Cargo.lock.
socsim-core   = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-core" }
socsim-engine = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-engine" }
socsim-net    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-net" }
socsim-llm    = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-llm", features = ["live"] }
# 出力ヘルパ (timestamp / run-dir / latest symlink / CSV・JSON writer)．
# ライブラリモードのボイラープレートを集約した共有クレット．
socsim-results = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", branch = "main", package = "socsim-results" }
